--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -16,6 +16,7 @@
   max-width: 1700px;
   margin-left: auto;
   margin-right: auto;
+  position: relative;
 }
 
 .logo {
@@ -26,11 +27,45 @@
     font-weight: 900;
   }
 }
-.menu {
+.menuDesktop {
   display: flex;
   align-items: center;
   gap: 2rem;
 
+  a {
+    color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+  }
+
+  @media screen and (max-width: 1060px) {
+    display: none;
+  }
+}
+
+.menuButton {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  cursor: pointer;
+  span {
+    width: 20px;
+    height: 1px;
+  }
+}
+
+.menuMobile {
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  @media screen and (max-width: 1060px) {
+    display: flex;
+    position: absolute;
+    right: 3rem;
+    top: 4rem;
+    flex-direction: column;
+    align-items: flex-end;
+  }
   a {
     color: #fff;
     font-weight: 700;
