--- a/src/components/gallery/styles.module.scss
+++ b/src/components/gallery/styles.module.scss
@@ -25,14 +25,10 @@
   width: 50px;
   height: 50px;
   border-radius: 12px;
-  background-color: rgba(255, 255, 255, 0.5);
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
   transition: ease-in-out all 0.2s;
-
-  &:hover {
-    transform: scale(1.1);
-  }
+  border: 2px solid #fff;
 }
