--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -26,6 +26,18 @@
     color: #fff;
     font-weight: 900;
   }
+  .desktopLogo {
+    display: block;
+    @media screen and (max-width: 1060px) {
+      display: none;
+    }
+  }
+  .mobileLogo {
+    display: none;
+    @media screen and (max-width: 1060px) {
+      display: block;
+    }
+  }
 }
 .menuDesktop {
   display: flex;
@@ -47,10 +59,16 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+  justify-content: center;
   cursor: pointer;
   span {
     width: 20px;
     height: 1px;
+  }
+
+  display: none;
+  @media screen and (max-width: 1060px) {
+    display: flex;
   }
 }
 
