--- a/src/components/title-page/styles.module.scss
+++ b/src/components/title-page/styles.module.scss
@@ -6,10 +6,11 @@
   align-items: center;
   flex-wrap: nowrap;
   gap: 2rem;
-  height: 100vh;
+  min-height: calc(100vh - 75px);
 
   @include tablet {
     flex-direction: column;
+    margin-top: 4rem;
   }
 }
 
