--- a/src/components/video-gallery/styles.module.scss
+++ b/src/components/video-gallery/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/config';
 
 .videoGalleryWrapper {
-  margin-top: 3.5rem;
+  min-height: calc(100dvh - 75px);
 }
 
 .selectedVideoWrapper {
