--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -10,6 +10,7 @@
 
 .headerWrapper {
   display: flex;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
   padding: 1.5rem 3rem;
@@ -17,24 +18,33 @@
   margin-left: auto;
   margin-right: auto;
   position: relative;
+
+  @include mobile-l {
+    padding: 1.5rem 1.5rem;
+  }
 }
 
 .logo {
+  margin-right: auto;
   a {
     font-family: Sansita;
     font-size: 20px;
     color: #fff;
     font-weight: 900;
   }
+  margin-top: -7px;
+  @media screen and (max-width: 1100px) {
+    margin-top: 0;
+  }
   .desktopLogo {
     display: block;
-    @media screen and (max-width: 1060px) {
+    @media screen and (max-width: 580px) {
       display: none;
     }
   }
   .mobileLogo {
     display: none;
-    @media screen and (max-width: 1060px) {
+    @media screen and (max-width: 580px) {
       display: block;
     }
   }
@@ -50,7 +60,7 @@
     font-size: 14px;
   }
 
-  @media screen and (max-width: 1060px) {
+  @media screen and (max-width: 1100px) {
     display: none;
   }
 }
@@ -58,16 +68,17 @@
 .menuButton {
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 4px;
   justify-content: center;
   cursor: pointer;
   span {
     width: 20px;
-    height: 1px;
+    height: 2px;
+    border-radius: 4px;
   }
 
   display: none;
-  @media screen and (max-width: 1060px) {
+  @media screen and (max-width: 1100px) {
     display: flex;
   }
 }
@@ -76,7 +87,7 @@
   height: 0;
   overflow: hidden;
   opacity: 0;
-  @media screen and (max-width: 1060px) {
+  @media screen and (max-width: 1100px) {
     display: flex;
     position: absolute;
     right: 3rem;
