--- a/src/components/video-gallery/styles.module.scss
+++ b/src/components/video-gallery/styles.module.scss
@@ -38,3 +38,28 @@
 .description {
   white-space: pre-wrap;
 }
+
+.navWrapper {
+  position: absolute;
+  z-index: 11;
+  top: 0;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  top: 50%;
+  transform: translate(0, -50%);
+  padding: 2rem;
+}
+
+.navButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 12px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: ease-in-out all 0.2s;
+  border: 2px solid #fff;
+}
