--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,7 +1,7 @@
 @import '@/styles/config';
 
 .header {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
@@ -26,6 +26,7 @@
 
 .logo {
   margin-right: auto;
+  z-index: 5;
   a {
     font-family: Sansita;
     font-size: 20px;
@@ -66,17 +67,16 @@
 }
 
 .menuButton {
-  display: flex;
   flex-direction: column;
   gap: 4px;
   justify-content: center;
   cursor: pointer;
+  z-index: 5;
   span {
     width: 20px;
     height: 2px;
     border-radius: 4px;
   }
-
   display: none;
   @media screen and (max-width: 1100px) {
     display: flex;
@@ -84,20 +84,25 @@
 }
 
 .menuMobile {
-  height: 0;
+  width: 100dvw;
+  height: 100dvh;
   overflow: hidden;
+  opacity: 1;
+  display: flex;
+  position: absolute;
+  background-color: #ddd1c2;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   opacity: 0;
-  @media screen and (max-width: 1100px) {
-    display: flex;
-    position: absolute;
-    right: 3rem;
-    top: 4rem;
-    flex-direction: column;
-    align-items: flex-end;
-  }
+  gap: 1rem;
+
   a {
-    color: #fff;
+    color: $brown;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 18px;
   }
 }
