--- a/src/components/video-gallery/styles.module.scss
+++ b/src/components/video-gallery/styles.module.scss
@@ -53,13 +53,31 @@
 }
 
 .navButton {
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   border-radius: 12px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: ease-in-out all 0.2s;
-  border: 2px solid #fff;
+}
+
+.navigation {
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 2rem;
+}
+
+.swiper-pagination-bullet {
+  width: 5px;
+  height: 5px;
+  border-radius: 100%;
+}
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #007aff;
 }
