--- a/src/components/wrapper/styles.module.scss
+++ b/src/components/wrapper/styles.module.scss
@@ -6,6 +6,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 4rem;
+  min-height: 100vh;
 
   @include mobile-l {
     padding: 1.5rem 1.5rem;
