--- a/src/components/gallery/styles.module.scss
+++ b/src/components/gallery/styles.module.scss
@@ -1,6 +1,31 @@
 @import '@/styles/config';
 
 .galleryWrapper {
-  height: 30vw;
   display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.mainImage {
+  width: 100%;
+  height: auto;
+}
+.galleryStripWrapper {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+}
+.galleryStrip {
+  display: flex;
+  align-items: center;
+  overflow: scroll;
+  width: 100%;
+  height: 100%;
+
+  .minorImage {
+    height: 100%;
+    width: auto;
+  }
 }
