--- a/src/components/gallery/styles.module.scss
+++ b/src/components/gallery/styles.module.scss
@@ -14,16 +14,16 @@
 }
 .galleryStripWrapper {
   width: 100%;
-  height: 100px;
+  height: 150px;
   overflow: hidden;
 }
 .galleryStrip {
   display: flex;
   align-items: center;
-  overflow: scroll;
   width: 100%;
   height: 100%;
   gap: 1rem;
+  cursor: pointer;
 
   .minorImage {
     height: 100%;
