--- a/src/components/gallery/styles.module.scss
+++ b/src/components/gallery/styles.module.scss
@@ -1,16 +1,16 @@
-@import '@/styles/config';
+@import "@/styles/config";
 
 .galleryWrapper {
   display: flex;
   width: 100%;
   height: 100%;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .mainImage {
   width: 100%;
   height: auto;
+  padding-bottom: 1rem;
 }
 .galleryStripWrapper {
   width: 100%;
