--- a/src/components/wrapper/styles.module.scss
+++ b/src/components/wrapper/styles.module.scss
@@ -5,6 +5,7 @@
   max-width: 1700px;
   margin-left: auto;
   margin-right: auto;
+  min-height: 100vh;
 
   @include mobile-l {
     padding: 1.5rem 1.5rem;
@@ -12,7 +13,7 @@
 }
 
 .top {
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 
 .centre {
